# auroka

./: README.md  cargo.toml  rustfmt.toml
auroka_test_web/: Cargo.toml  README.md
auroka_test_web/src/: lib.rs  page.rs  with_page.rs
auroka_test_web/src/backends/: browser.rs  element.rs
auroka_test_web/src/backends/chromium/: chromium.rs  mod.rs
auroka_test_web/src/with_server/: mod.rs  response.rs  with_server.rs
auroka_test_web/tests/: lib.rs
auroka_test_web/tests/with_server/: mod.rs
auroka_test_web/tests/with_server/content_type/: mod.rs
auroka_test_web/tests/with_server/methods/: mod.rs
auroka_test_web/tests/with_server/routes/: mod.rs  servers_multiple_routes_behavior.rs  serves_root_path_behavior.rs  serves_route_ignoring_query_params_behavior.rs  serves_single_route_behavior.rs  serves_unknown_route_behavior.rs
auroka_test_web/tests/with_server/status/: mod.rs
auroka_test_web_page/: Cargo.toml  README.md
auroka_test_web_page/src/: browser.rs  expect.rs  lib.rs  locator.rs  page.rs  with_page.rs
auroka_test_web_page/src/backends/: backend.rs  browser.rs  mod.rs
auroka_test_web_page/src/backends/cdp/: cdp.rs  element.rs  mod.rs
auroka_test_web_page/src/backends/chromium/: chromium.rs
auroka_test_web_page/src/backends/webdriver/: element.rs  mod.rs  webdriver.rs
auroka_test_web_page/tests/: lib.rs  loads_home_in_german_behavior.rs  with_page_test.rs
auroka_test_web_page/tests/with_page/: mod.rs
auroka_test_web_page/tests/with_page/browsers/: mod.rs
auroka_test_web_page/tests/with_page/page_config/: mod.rs  (+1 more)
(+692 files in other folders)
