[package]
name = "auroka_test_web_page"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chromiumoxide.workspace = true
futures.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thirtyfour.workspace = true
tokio.workspace = true

[dev-dependencies]
auroka.workspace = true
auroka_test_web.workspace = true
tokio.workspace = true
